# nm-share-wifi

./: Cargo.toml  flake.nix
src/: gui.rs  main.rs  network.rs  networkmanager.rs  qr.rs
